--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,23 +1,27 @@
 .places {
   margin: 92px auto;
-  max-width: calc(100% - 296px);
+  width: calc(100% - 296px);
+  max-width: 984px;
 }
 
-@media screen and (max-width: 1270px) {
+@media screen and (max-width: 1279px) {
   .places {
-    max-width: calc(100% - 96px);
+    width: calc(100% - 96px);
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .places {
-    max-width: calc(100% - 48px);
+    width: calc(100% - 48px);
+    max-width: 720px;
     margin: 88px auto;
   }
 }
 
 @media screen and (max-width: 767px) {
   .places {
+    width: 320px;
     max-width: 320px;
     margin: 64px auto 14px auto;
   }
