--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -7,7 +7,8 @@
 @import url(__title/__title.css);
 
 .intro {
-  max-width: calc(100% - 296px);
+  max-width: 984px;
+  width: calc(100% - 296px);
   margin: 0 auto 92px auto;
 }
 
