--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,7 +4,8 @@
 @import url(__title/__title.css);
 
 .lead {
-  max-width: calc(100% - 296px);
+  max-width: 984px;
+  width: calc(100% - 296px);
   margin: 0 auto 92px auto;
 }
 
