--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,7 +2,8 @@
 
 .photo-grid {
   margin: 0 auto;
-  max-width: calc(100% - 96px);
+  max-width: 1184px;
+  width: calc(100% - 96px);
   display: grid;
   grid-gap: 16px;
   padding: 0;
