--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -12,9 +12,16 @@
   justify-content: space-between;
 }
 
+@media screen and (max-width: 1279px) {
+  .footer {
+    max-width: 928px;
+  }
+}
+
 @media screen and (max-width: 1023px) {
   .footer {
-    max-width: calc(100% - 48px);
+    max-width: 720px;
+    width: calc(100% - 48px);
     margin: 88px auto 0 auto;
   }
 }
