--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -13,19 +13,22 @@
 
 @media screen and (max-width: 1279px) {
   .header {
-    max-width: calc(100% - 96px);
+    max-width: 928px;
+    width: calc(100% - 96px);
   }
 }
 
 @media screen and (max-width: 1023px) {
   .header {
-    max-width: calc(100% - 48px);
+    max-width: 720px;
+    width: calc(100% - 48px);
   }
 }
 
 @media screen and (max-width: 767px) {
   .header {
-    max-width: calc(100% - 32px);
+    max-width: 288px;
+    width: calc(100% - 32px);
     padding-top: 20px;
   }
 }
