--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -14,20 +14,23 @@
 
 @media screen and (max-width: 1279px) {
   .intro {
-    max-width: calc(100% - 96px);
+    width: calc(100% - 96px);
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .intro {
     margin: 0 auto 88px auto;
-    max-width: calc(100% - 48px);
+    width: calc(100% - 48px);
+    max-width: 768px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .intro {
     margin: 0 auto 64px auto;
-    max-width: calc(100% - 32px);
+    width: calc(100% - 32px);
+    max-width: 288px;
   }
 }
