--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -11,20 +11,23 @@
 
 @media screen and (max-width: 1279px) {
   .lead {
-    max-width: calc(100% - 96px);
+    max-width: 928px;
+    width: calc(100% - 96px);
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lead {
-    max-width: 100%;
+    max-width: 768px;
+    width: 100%;
     margin: 0 auto 88px auto;
   }
 }
 
 @media screen and (max-width: 767px) {
   .lead {
-    max-width: 100%;
+    max-width: 320px;
+    width: 100%;
     margin: 0 auto 64px auto;
   }
 }
