--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -14,19 +14,22 @@
 @media screen and (max-width: 1279px) {
   .photo-grid {
     grid-gap: 14px;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .photo-grid {
-    max-width: calc(100% - 48px);
+    max-width: 720px;
+    width: calc(100% - 48px);
     grid-gap: 16px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .photo-grid {
-    max-width: calc(100% - 32px);
+    max-width: 288px;
+    width: calc(100% - 32px);
     grid-gap: 12px;
   }
 }
