--- a/blocks/intro/__subtitle/__subtitle.css
+++ b/blocks/intro/__subtitle/__subtitle.css
@@ -5,10 +5,9 @@
   max-width: 690px;
 }
 
-
 @media screen and (max-width: 767px) {
   .intro__subtitle {
     line-height: 1.2;
     max-width: 720px;
   }
-
+}
